--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Armando Vaquero",
   "license": "ISC",
   "devDependencies": {
+    "parcel": "^2.13.3",
     "sass": "^1.83.4"
   }
 }
