--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "sass",
+  "name": "casadipepe",
   "version": "1.0.0",
   "description": "Generar el CSS a partir de SCSS",
-  "main": "index.js",
   "scripts": {
-    "compile:sass": "sass styles/sass/:styles/css/",
-    "watch:sass": "sass --watch styles/sass/:styles/css/"
+    "compile:sass": "sass Fuente/styles/sass/:styles/css/",
+    "watch:sass": "sass --watch Fuente/styles/sass/:styles/css/",
+    "dev:parcel": "parcel index.html Fuente/html/*.html --dist-dir dev",
+    "build:parcel": "parcel build index.html Fuente/html/*.html --dist-dir build",
+    "limpia:dev": "rimraf dev .parcel-cache",
+    "limpia:build": "rimraf build .parcel-cache",
+    "copiarDev:media": "sleep 5 && cp -r Fuente/media/ dev/Fuente/media",
+    "copiarBuild:media": "sleep 5 && cp -r Fuente/media/ build/Fuente/media",
+    "dev:todo": "run-s limpia:dev && run-p dev:parcel copiarDev:media",
+    "build:todo": "run-s limpia:build && run-p build:parcel copiarBuild:media"
   },
   "author": "Armando Vaquero",
   "license": "ISC",
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "parcel": "^2.13.3",
+    "rimraf": "^6.0.1",
     "sass": "^1.83.4"
   }
 }
