--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm-run-all": "^4.1.5",
     "parcel": "^2.13.3",
     "rimraf": "^6.0.1",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "unlighthouse": "^0.15.0"
   }
 }
